상세페이지 id값 적용 및 두 페이지 상대경로 설정

--- a/detail/moviedetail.html
+++ b/detail/moviedetail.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <header><a href="C:\work\B2COIN\index.html">
+  <header><a href="../index.html">
     <img class="home" src="https://w7.pngwing.com/pngs/512/83/png-transparent-home-page-house-button-user-interface-icon.png" alt="">
   <a></header>
 
