--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
   </header>
   <main id="main"></main>
   <script src="script.js"></script>
+  <!-- HTML 코드에 모달 다이얼로그를 추가합니다 -->
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2 id="movieTitle"></h2>
+      <p id="movieOverview"></p>
+      <p id="movieRating"></p>
+    </div>
+  </div>
+
 </body>
 
 </html>
