--- a/detail_page/detail_page.html
+++ b/detail_page/detail_page.html
@@ -8,18 +8,28 @@
 </head>
 
 <body>
-    <div class="commentmain">
+    <form id="commentMain">
         <h1> 상세페이지</h1>
         COMMENT
         <br>--------------------------------------------------------------------------------------------------</br>
         <div>
-            <input id="id" type="text" placeholder="name">
-            <input id="pwd" type="password" placeholder="password">
-            <input id="txt" type="text" placeholder="댓글을 입력하세요.">
-            <button id="saveBtn"> 저장 </button>
+            <label> 작성자명 : </label>
+            <input id="userId" type="text" placeholder="name" required>
+
+            <label> 비밀번호 : </label>
+            <input id="userPwd" type="password" placeholder="password" required>
+            <br></br>
+
+            <label> 리뷰 작성 </label>
+            <br></br>
+            <textarea id="userReview" type="text" placeholder="댓글을 입력하세요." required> </textarea>
+
+            <button id="saveBtn" type="submit" value="click"> 저장 </button>
         </div>
         --------------------------------------------------------------------------------------------------
-    </div>
+    </form>
+    <div id="commentStack"> </div>
+
     <script src="detail_page.js"></script>
 </body>
 
