--- a/detail/moviedetail.html
+++ b/detail/moviedetail.html
@@ -14,6 +14,7 @@
   <a></header>
 
   <body>
+    <main id="main"></main>
     <div class="page0">
       <img class="poster" src="https://t1.daumcdn.net/movie/1cf414e700d9b327eec5cb713c9e62723598e4d6" alt="">
       <div class="movie-info">
