--- a/detail_page/detail_page.html
+++ b/detail_page/detail_page.html
@@ -30,7 +30,7 @@
     </form>
     <div id="commentStack"> </div>
 
-    <script src="detail_page.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
