--- a/detail/moviedetail.html
+++ b/detail/moviedetail.html
@@ -55,7 +55,8 @@
     </form>
     <div id="commentStack"> </div>
 
-    <script src="moviedetail.js"></script>
+    <!-- <script type="module" src="moviedetail.js"></script> -->
+    <script type="module" src="index.js"></script>
   </body>
 
 </html>
